# Corrode

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/: helix-cli  helix-memory-system  helix-query-from-cypher  helix-query-from-gremlin  helix-query-from-hql  helix-query-go  helix-query-json-dynamic  helix-query-optimize  helix-query-python  helix-query-rust  helix-query-typescript
.github/workflows/: ci.yml
crates/corrode-core/: Cargo.toml
crates/corrode-core/src/: lib.rs
crates/corrode-daemon/: Cargo.toml
crates/corrode-daemon/src/: daemon.rs  fuse.rs  graph.rs  hipfire.rs  main.rs  planner.rs  roles.rs  server.rs  swarm.rs  terminal.rs  vfs.rs
crates/corrode-web/: Cargo.toml  index.html
crates/corrode-web/src/: main.rs
webui/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
webui/assets/: corrode-term.js
webui/src/: app.rs  egui_panel.rs  main.rs  model.rs  term.rs  ws.rs
