[workspace]
resolver = "2"
members = [
    "crates/corrode-core",
    "crates/corrode-daemon",
    "crates/corrode-web",
]
# Keep the vendored HelixDB workspace from being absorbed as members — it stays a
# plain (optional, feature-gated) path dependency of corrode-daemon, not part of
# our build/test graph unless `--features helix` is on.
exclude = ["third_party"]
# webui/ is a wasm crate on its own build target (trunk/wasm-pack), kept OUT of the
# native workspace so `cargo build` doesn't drag a wasm toolchain in. See webui/README.md.

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
corrode-core = { path = "crates/corrode-core" }
