[package]
name = "corrode-daemon"
version = "0.0.0"
edition.workspace = true
# AGPL-3.0, NOT Apache: the `helix` feature links HelixDB's helix_engine in-process,
# and HelixDB is AGPL-3.0. In-process linking makes this binary a derivative work,
# so the daemon inherits AGPL (network-use clause included, since it serves the web
# UI). corrode-core and corrode-web link nothing GPL and stay Apache-2.0.
license = "AGPL-3.0"
description = "The Corrode agent daemon: hipfire swarm, graph<->git VFS, embedded HelixDB."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
axum.workspace = true
futures-util.workspace = true
async-trait.workspace = true
corrode-core.workspace = true

# Embedded graph+vector store, pinned via the git submodule at third_party/helix-db
# (tag v2.3.5). Optional so the base workspace builds without the heavy vendored
# compile. Enable with `--features helix`. NOTE: upstream helix-db uses native-tls,
# so `--features helix` needs system OpenSSL + pkg-config at build time (see CLAUDE.md).
[dependencies.helix-db]
path = "../../third_party/helix-db/helix-db"
optional = true

# FUSE mount of the Vfs, so git and subagent shells see the graph<->git projection
# as a real filesystem. Pure-protocol crate (no libfuse-dev); needs fusermount3 at
# runtime. `unprivileged` lets the daemon mount without root (via fusermount3).
# Optional — off by default, like helix.
[dependencies.fuse3]
version = "0.9"
features = ["tokio-runtime", "unprivileged"]
optional = true

# Pulled in only by the `fuse` feature: `bytes` for ReplyData, `libc` for errno
# constants and getuid/getgid on the mount owner.
[dependencies.bytes]
version = "1"
optional = true

[dependencies.libc]
version = "0.2"
optional = true

[features]
default = []
helix = ["dep:helix-db"]
fuse = ["dep:fuse3", "dep:bytes", "dep:libc"]

[[bin]]
name = "corrode-daemon"
path = "src/main.rs"
