[package]
name = "corrode-web"
version = "0.0.0"
edition.workspace = true
license.workspace = true  # Apache-2.0: serves the UI and proxies to the daemon; links no GPL.
description = "Web server: serves the Corrode wasm webui and bridges it to the daemon."

[dependencies]
corrode-core.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
# Serve the trunk-built webui bundle (webui/dist). In debug it reads from disk
# (pick up `trunk build` without recompiling); in release it embeds -> one binary.
rust-embed = { version = "8", features = ["mime-guess"] }

[[bin]]
name = "corrode-web"
path = "src/main.rs"
